arregle la ortografía

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </button>
         </div>
         <section class="titulo-heladeras">
-            <h1>Productos Electrodomesticos</h1>
+            <h1>Productos Electrodomésticos</h1>
         </section>
         <section class="flex-productos">
             <div class="box-heladeras">
@@ -107,7 +107,7 @@
             </div>
         </section>
         <section class="titulo-netbooks">
-            <h1>Productos Informaticos</h1>
+            <h1>Productos Informáticos</h1>
         </section>
         <section class="flex-productos">
             <div class="box-netbooks">
@@ -149,7 +149,7 @@
             </div>
         </section>
         <section class="titulo-lavarropas">
-            <h1>Proximos productos en stock</h1>
+            <h1>Próximos productos en stock</h1>
         </section>    
         <section id="flex-aspiradora">
             <div class="box-aspi">
@@ -167,7 +167,7 @@
         <section>
             <div class="flex-ayuda">
                 <div>
-                    <h4>¡Consultanos para poder ayudarte!</h4>
+                    <h4>¡Consúltanos para poder ayudarte!</h4>
                     <div>
                         <div class="redes-catalogo">
                             <a href="https://www.twitter.com">
@@ -187,10 +187,10 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía gmail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 38656025</h4>
+                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
