--- a/secciones/acerca-de.html
+++ b/secciones/acerca-de.html
@@ -42,7 +42,7 @@
         <section class="nosotrosNV">
             <h1>Aquí encontraran nuestra historia como empresa:</h1>
             <div class="historia">
-                <span>¡La evolución no para! Por eso Nosotros seguimos avanzando y creciendo con la mejor tecnología para brindar un mejor servicio a nustros clientes. Somos una empresa argentina con una buena trayectoria, adaptándonos continuamente a los cambios de mercado y priorizando siempre a las personas: clientes, empleados y proveedores.<br> Nuestro equipo de expertos está preparado para asesorarte y brindarte todos los días una experiencia de compra personalizada que se adapte a lo que buscás.<br> También contamos con un servicio técnico especializado, con asistencia total en posventa para que disfrutes todos los días de tu producto como si fuera el primero. Además, ofrecemos ofertas especiales, descuentos y planes de financiación para que accedas a eso que tanto querés al precio más accesible y con la mejor cuota.</span>
+                <span>¡La evolución no para! Por eso Nosotros seguimos avanzando y creciendo con la mejor tecnología para brindar un mejor servicio a nuestros clientes. Somos una empresa argentina con una buena trayectoria, adaptándonos continuamente a los cambios de mercado y priorizando siempre a las personas: clientes, empleados y proveedores.<br> Nuestro equipo de expertos está preparado para asesorarte y brindarte todos los días una experiencia de compra personalizada que se adapte a lo que buscas.<br> También contamos con un servicio técnico especializado, con asistencia total en posventa para que disfrutes todos los días de tu producto como si fuera el primero. Además, ofrecemos ofertas especiales, descuentos y planes de financiación para que accedas a eso que tanto querés al precio más accesible y con la mejor cuota.</span>
             </div>
         </section>
         <section class="publicidades-otros">
@@ -55,7 +55,7 @@
         <section>
             <div class="flex-ayuda">
                 <div>
-                    <h4>¡Consultanos para poder ayudarte!</h4>
+                    <h4>¡Consúltanos para poder ayudarte!</h4>
                     <div>
                         <div class="redes-catalogo">
                             <a href="https://www.twitter.com">
@@ -75,10 +75,10 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía gmail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 38656025</h4>
+                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
