--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -105,7 +105,7 @@
         <section>
             <div class="flex-ayuda">
                 <div>
-                    <h4>¡Consultanos para poder ayudarte!</h4>
+                    <h4>¡Consúltanos para poder ayudarte!</h4>
                     <div>
                         <div class="redes-catalogo">
                             <a href="https://www.twitter.com">
@@ -125,10 +125,10 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía gmail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 38656025</h4>
+                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
