--- a/secciones/pedidos.html
+++ b/secciones/pedidos.html
@@ -45,7 +45,7 @@
                 <div class="bordes-pedidos">
                     <img src="../img/aireacondicionado1.webp" alt="">
                     <div>
-                        <h2 class="texto-productos">Aireacondicionado</h2>
+                        <h2 class="texto-productos">Airea condicionado</h2>
                         <h3>Comprado</h3>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
         <section>
             <div class="flex-ayuda">
                 <div>
-                    <h4>¡Consultanos para poder ayudarte!</h4>
+                    <h4>¡Consúltanos para poder ayudarte!</h4>
                     <div>
                         <div class="redes-catalogo">
                             <a href="https://www.twitter.com">
@@ -102,10 +102,10 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía gmail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 38656025</h4>
+                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
