--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -94,7 +94,7 @@
                     <div class="lista-productos">
                         <img class="img-heladeras" src="../img/aireacondicionado1.webp" alt="">
                         <div>
-                            <h2 class="texto-productos">Aireacondicionado</h2>
+                            <h2 class="texto-productos">Airea condicionado</h2>
                             <h3 class="texto-productos">$220.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
@@ -102,7 +102,7 @@
                     <div class="lista-productos">
                         <img class="img-heladeras" src="../img/aireacondicionado2.webp" alt="">
                         <div>
-                            <h2 class="texto-productos">Aireacondicionado</h2>
+                            <h2 class="texto-productos">Airea condicionado</h2>
                             <h3 class="texto-productos">$188.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
@@ -115,7 +115,7 @@
         <section>
             <div class="flex-ayuda">
                 <div>
-                    <h4>¡Consultanos para poder ayudarte!</h4>
+                    <h4>¡Consúltanos para poder ayudarte!</h4>
                     <div>
                         <div class="redes-catalogo">
                             <a href="https://www.twitter.com">
@@ -135,10 +135,10 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía gmail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 38656025</h4>
+                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
