correcion de errores

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/imgTitulo.jpg" alt="" width="100" height="100">
                 </a>
-            <ul class="nav nav-pills">
+            <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link active bg-transparent" aria-current="page" href="../index.html">Inicio</a>
                 </li>
@@ -125,10 +125,12 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail</h4>
+                    <a class="consultas" href="mailto:rodrigo.ajnota1@gmail.com">rodrigo.ajnota1@gmail.com</a>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
+                    <h4>Atención vía telefónica</h4>
+                    <h4>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
