--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/imgTitulo.jpg" alt="" width="100" height="100">
                 </a>
-            <ul class="nav nav-pills">
+            <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link active bg-transparent" aria-current="page" href="../index.html">Inicio</a>
                 </li>
@@ -47,7 +47,7 @@
                         <img class="img-heladeras" src="../img/heladera5.jpg" alt="">
                         <div>
                             <h2 class="texto-productos">Heladeras</h2>
-                            <h3 class="texto-productos">$160.000</h3>
+                            <h3 class="precio-productos">$160.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                         <img class="img-heladeras" src="../img/heladera6.jpg" alt="">
                         <div>
                             <h2 class="texto-productos">Heladeras</h2>
-                            <h3 class="texto-productos">$140.000</h3>
+                            <h3 class="precio-productos">$140.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                         <img class="img-heladeras" src="../img/horno1.webp" alt="">
                         <div>
                             <h2 class="texto-productos">Hornos</h2>
-                            <h3 class="texto-productos">$66.000</h3>
+                            <h3 class="precio-productos">$66.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                         <img class="img-heladeras" src="../img/horno2.webp" alt="">
                         <div>
                             <h2 class="texto-productos">Hornos</h2>
-                            <h3 class="texto-productos">$80.000</h3>
+                            <h3 class="precio-productos">$80.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <img class="img-heladeras" src="../img/microondas1.webp" alt="">
                         <div>
                             <h2 class="texto-productos">Microondas</h2>
-                            <h3 class="texto-productos">$40.000</h3>
+                            <h3 class="precio-productos">$40.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         <img class="img-heladeras" src="../img/microondas2.webp" alt="">
                         <div>
                             <h2 class="texto-productos">Microondas</h2>
-                            <h3 class="texto-productos">$33.000</h3>
+                            <h3 class="precio-productos">$33.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                         <img class="img-heladeras" src="../img/aireacondicionado1.webp" alt="">
                         <div>
                             <h2 class="texto-productos">Airea condicionado</h2>
-                            <h3 class="texto-productos">$220.000</h3>
+                            <h3 class="precio-productos">$220.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                         <img class="img-heladeras" src="../img/aireacondicionado2.webp" alt="">
                         <div>
                             <h2 class="texto-productos">Airea condicionado</h2>
-                            <h3 class="texto-productos">$188.000</h3>
+                            <h3 class="precio-productos">$188.000</h3>
                             <a href="#" class="btn">Comprar</a>
                         </div>
                     </div>
@@ -135,10 +135,12 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail</h4>
+                    <a class="consultas" href="mailto:rodrigo.ajnota1@gmail.com">rodrigo.ajnota1@gmail.com</a>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
+                    <h4>Atención vía telefónica</h4>
+                    <h4>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
