--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -56,9 +55,6 @@
                 <div class="carousel-item">
                     <img src="./img/carrusel3.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel4.jpg" class="d-block w-100" alt="...">
-                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon espacio" aria-hidden="true"></span>
@@ -69,15 +65,15 @@
             <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <section class="titulo-heladeras">
-            <h1>Productos Electrodomésticos</h1>
+        <section>
+            <h1 class="titulo-heladeras">Productos Electrodomésticos</h1>
         </section>
         <section class="flex-productos">
             <div class="box-heladeras">
                 <img class="img-productos" src="./img/heladera1.webp" alt="">
                 <div>
                     <h2 class="texto-productos">Heladera</h2>
-                    <h3 class="texto-productos">$155.000</h3>
+                    <h3 class="precio-productos">$155.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>   
@@ -85,7 +81,7 @@
                 <img class="img-productos" src="./img/heladera2.webp" alt="">
                 <div>
                     <h2 class="texto-productos">Heladera</h2>
-                    <h3 class="texto-productos">$150.000</h3>
+                    <h3 class="precio-productos">$150.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -93,7 +89,7 @@
                 <img class="img-productos" src="./img/heladera3.webp" alt="">
                 <div>
                     <h2 class="texto-productos">Heladera</h2>
-                    <h3 class="texto-productos">$164.000</h3>
+                    <h3 class="precio-productos">$164.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -101,20 +97,20 @@
                 <img class="img-productos" src="./img/heladera4.webp" alt="">
                 <div>
                     <h2 class="texto-productos">Heladera</h2>
-                    <h3 class="texto-productos">$160.000</h3>
+                    <h3 class="precio-productos">$160.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
         </section>
-        <section class="titulo-netbooks">
-            <h1>Productos Informáticos</h1>
+        <section>
+            <h1 class="titulo-netbooks">Productos Informáticos</h1>
         </section>
         <section class="flex-productos">
             <div class="box-netbooks">
                 <img class="img-productos" src="./img/notebook1.jpg" alt="">
                 <div>
                     <h2 class="texto-productos">Notebook</h2>
-                    <h3 class="texto-productos">$49.000</h3>
+                    <h3 class="precio-productos">$49.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>   
@@ -122,7 +118,7 @@
                 <img class="img-productos" src="./img/notebook2.jpg" alt="">
                 <div>
                     <h2 class="texto-productos">Notebook</h2>
-                    <h3 class="texto-productos">$55.000</h3>
+                    <h3 class="precio-productos">$55.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -130,7 +126,7 @@
                 <img class="img-productos" src="./img/notebook3.jpg" alt="">
                 <div>
                     <h2 class="texto-productos">Notebook</h2>
-                    <h3 class="texto-productos">$51.000</h3>
+                    <h3 class="precio-productos">$51.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -138,7 +134,7 @@
                 <img class="img-productos" src="./img/notebook4.jpg" alt="">
                 <div>
                     <h2 class="texto-productos">Notebook</h2>
-                    <h3 class="texto-productos">$60.000</h3>
+                    <h3 class="precio-productos">$60.000</h3>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -148,8 +144,8 @@
                 <img class="img-publicidad" src="./img/publicidad2.jpg" alt="">
             </div>
         </section>
-        <section class="titulo-lavarropas">
-            <h1>Próximos productos en stock</h1>
+        <section>
+            <h1 class="titulo-lavarropas">Próximos productos en stock</h1>
         </section>    
         <section id="flex-aspiradora">
             <div class="box-aspi">
@@ -187,10 +183,12 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail</h4>
+                    <a class="consultas" href="mailto:rodrigo.ajnota1@gmail.com">rodrigo.ajnota1@gmail.com</a>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
+                    <h4>Atención vía telefónica</h4>
+                    <h4>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
