--- a/secciones/acerca-de.html
+++ b/secciones/acerca-de.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/imgTitulo.jpg" alt="" width="100" height="100">
                 </a>
-            <ul class="nav nav-pills">
+            <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link active bg-transparent" aria-current="page" href="../index.html">Inicio</a>
                 </li>
@@ -40,7 +40,7 @@
     </header>
     <main>
         <section class="nosotrosNV">
-            <h1>Aquí encontraran nuestra historia como empresa:</h1>
+            <h1 class="titulo-nosotros">Aquí encontraran nuestra historia como empresa:</h1>
             <div class="historia">
                 <span>¡La evolución no para! Por eso Nosotros seguimos avanzando y creciendo con la mejor tecnología para brindar un mejor servicio a nuestros clientes. Somos una empresa argentina con una buena trayectoria, adaptándonos continuamente a los cambios de mercado y priorizando siempre a las personas: clientes, empleados y proveedores.<br> Nuestro equipo de expertos está preparado para asesorarte y brindarte todos los días una experiencia de compra personalizada que se adapte a lo que buscas.<br> También contamos con un servicio técnico especializado, con asistencia total en posventa para que disfrutes todos los días de tu producto como si fuera el primero. Además, ofrecemos ofertas especiales, descuentos y planes de financiación para que accedas a eso que tanto querés al precio más accesible y con la mejor cuota.</span>
             </div>
@@ -75,10 +75,12 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail</h4>
+                    <a class="consultas" href="mailto:rodrigo.ajnota1@gmail.com">rodrigo.ajnota1@gmail.com</a>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
+                    <h4>Atención vía telefónica</h4>
+                    <h4>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
