--- a/secciones/pedidos.html
+++ b/secciones/pedidos.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/imgTitulo.jpg" alt="" width="100" height="100">
                 </a>
-            <ul class="nav nav-pills">
+            <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link active bg-transparent" aria-current="page" href="../index.html">Inicio</a>
                 </li>
@@ -43,28 +43,28 @@
             <h1 class="titulo-pedidos">Acá encontraras los pedidos que hiciste:</h1>
             <div class="flex-pedidos">
                 <div class="bordes-pedidos">
-                    <img src="../img/aireacondicionado1.webp" alt="">
+                    <img class="img-pedidos" src="../img/aireacondicionado1.webp" alt="">
                     <div>
                         <h2 class="texto-productos">Airea condicionado</h2>
                         <h3>Comprado</h3>
                     </div>
                 </div>
                 <div class="bordes-pedidos">
-                    <img src="../img/horno1.webp" alt="">
+                    <img class="img-pedidos" src="../img/horno1.webp" alt="">
                     <div>
                         <h2 class="texto-productos">Horno</h2>
                         <h3>Comprado</h3>
                     </div>
                 </div>
                 <div class="bordes-pedidos">
-                    <img src="../img/heladera4.webp" alt="">
+                    <img class="img-pedidos" src="../img/heladera4.webp" alt="">
                     <div>
                         <h2 class="texto-productos">Heladera</h2>
                         <h3>Comprado</h3>
                     </div>
                 </div>
                 <div class="bordes-pedidos">
-                    <img src="../img/microondas1.webp" alt="">
+                    <img class="img-pedidos" src="../img/microondas1.webp" alt="">
                     <div>
                         <h2 class="texto-productos">Microondas</h2>
                         <h3>Comprado</h3>
@@ -102,10 +102,12 @@
                     </div>
                 </div>
                 <div>
-                    <h4>Atención vía mail<br><a href="mailto:rodrigo.ajnota1@gmail.com"><h4 class="consultas">rodrigo.ajnota1@gmail.com</h4></a></h4>
+                    <h4>Atención vía mail</h4>
+                    <a class="consultas" href="mailto:rodrigo.ajnota1@gmail.com">rodrigo.ajnota1@gmail.com</a>
                 </div>
                 <div>
-                    <h4>Atención vía telefónica<br>(011) 3865-6025</h4>
+                    <h4>Atención vía telefónica</h4>
+                    <h4>(011) 3865-6025</h4>
                 </div>
             </div>
         </section>
